--- a/app/src/main/res/layout/item_escenario.xml
+++ b/app/src/main/res/layout/item_escenario.xml
@@ -1,9 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    <TextView
-        android:id="@+id/escenariotitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name" />
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:textSize="20sp"
+    android:gravity="left"
+    android:textColor="@color/colorAccent"
+    android:padding="5dip"
+    />
